pass change